--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <header>
         <h1>Welcome to My Sample Page</h1>
+        <h1>Welcome to My Sample Page</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
